grammar.js
    source_file: $ =>
      prec.left(
        repeat(
          choice(
            $.package,
            $.fragment,
            $._dollar,
          ),
        ),
      ),

    _line_terminator: $ => seq(optional('\r'), '\n'),

    fragment: $ =>
      prec.left(seq(repeat1(seq($._top_level_statement, $._line_terminator)), optional($._dollar))),

    _dollar: $ => token(seq('$', optional('\r'), '\n')),

    procedure: $ =>
      seq(optional(alias(/_iter/i, '_iter')), alias(/_proc/i, '_proc'),
        optional($.label),
        seq(
          '(',
          optional(seq($.argument, repeat(seq(',', $.argument)))),
          optional(seq(optional(','), alias(/_optional/i, '_optional'), $._arguments)),
          optional(seq(optional(','), alias(/_gather/i, '_gather'), $.argument)),
          ')', optional(seq(choice('<<', '^<<'), $._arguments)),
        ),
        optional($.documentation),
        optional($._codeblock),
        alias(/_endproc/i, '_endproc'),
      ),

    _arguments: $ => prec.right(seq($.argument, repeat(seq(',', $.argument)), optional(','))),

    // _block [ @ <identifier> ]
    //   <statements>
    //   [ >> <rvalue tuple> ]
    // _endblock
    block: $ =>
      prec.left(
        seq(alias(/_block/i, '_block'), optional($.label), optional($._codeblock), alias(/_endblock/i, '_endblock')),
      ),

    assignment: $ =>
      prec.left(PREC.ASSIGN,
        seq($._expression,
          choice('<<', '^<<', '_and<<', '_andif<<', '_or<<', '_orif<<', '_xor<<', '**<<', '**^<<', '*<<', '*^<<', '/<<', '/^<<', '_mod<<', '_div<<', '-<<', '-^<<', '+<<', '+^<<'),
          $._expression),
      ),

    // _if <condition1>
    // _then
    //  <block body>
    // [ _elif <condition2>
    //   _then
    //     <block body> ]
    //     ...
    // [ _else
    //   <block body> ]
    // _endif
    handling: $ =>
      prec.left(seq(alias(/_handling/i, '_handling'), choice(
        alias(/_default/i, '_default'),
        seq(field('condition', $._expression), repeat(seq(',', field('condition', $._expression))), alias(/_with/i, '_with'), choice(alias(/_default/i, '_default'), $._expression))),
      )),

    // _catch <expression>
    //  <block body>
    // _endcatch
    primitive: $ => seq(alias(/_primitive/i, '_primitive'), $.number),

    // [ _for <lvalue tuple> ] _over <iter invocation>
    // _loop [ @<identifier> ]
    //  <block body>
    // [ _finally [ _with <lvalue tuple> ]
    //  <block body> ]
    // _endloop
    string_literal: $ =>
      choice(
        seq('"', repeat(choice(/[^"\n]/, /(.|\n)/)), '"'),
        seq('\'', repeat(choice(/[^'\n]/, /(.|\n)/)), '\''),
      ),

    // /<pattern>/<flags>
    call: $ =>
      prec.right(PREC.CALL,
        seq(
          field('receiver', $._expression),
          field('operator', '.'),
          field('message', $.identifier),
          optional(choice(
            seq('(', optional($._expression_list), ')'),
            seq('<<', optional($._expression_list)))),
        ),
      ),

    invoke: $ => prec.right(PREC.CALL,
      seq(
        field('receiver', $._expression),
        seq('(', optional($._expression_list), ')')),
    ),

    _expression_list: $ =>
      prec.right(seq($._expression, optional(choice(
        seq(',', $._expression_list),
        $.scatter,
      )))),

    unset: $ => alias(/_unset/i, '_unset'),
    super: $ => alias(/_super/i, '_super'),
    self: $ => alias(/_self/i, '_self'),
    clone: $ => alias(/_clone/i, '_clone'),

    thisthread: $ => alias(/_thisthread/i, '_thisthread'),

    class: $ => seq(alias(/_class/i, '_class'), field('java_classname', /\|[\p{L}\p{N}._]*\|/u)),

    _top_level_statement: $ => choice(
      $._definition,
      $._method_declaration,
      $._expression,
      $._global_assignment,
    ),

    _expression: $ => choice(
      $.handling,
      $.return,
      $.leave,
      $.continue,
      $.catch,
      $.throw,
      $.primitive,
      $.block,
      $.iterator,
      $.while,
      $.if,
      $.loop,
      $.try,
      $.loopbody,
      $.protect,
      $.lock,
      choice(
        $.parenthesized_expression,
        $.call,
        $.procedure,
        $.invoke,
        $.slot_accessor,
        $.indexed_access,
        $.gather,
        $.scatter,
        $.allresults,
        $.class,
        $.assignment,
        $.logical_operator,
        $.relational_operator,
        $.arithmetic_operator,
        $.unary_operator,
        $._literal,
        $._variable,
      ),
    ),

    _codeblock: $ => seq(
      choice($._expression, $._defvar),
      repeat(seq($._terminator, choice($._expression, $._defvar))),
      optional($._terminator)),

    number: $ => token(
      choice(
        seq(
          choice(/\p{N}+/u, /\p{N}+\.\p{N}+/u),
          optional(seq(/[eE&][+-]?/, /\p{N}+/u))),
        /(?:[2-9]|[1-2]\d|3[0-6])[rR][a-zA-Z0-9]+/)),

    variable: $ => prec.left($._identifier),

    identifier: $ => $._identifier,

    _identifier: $ => ID_REGEX,

    vector: $ => seq(
      '{',
      optional($._expression_list),
      '}',
    ),

    logical_operator: $ =>
      prec.left(PREC.BOOLEAN,
        seq(
          field('left', $._expression),
          field('operator', choice(alias(/_and/i, '_and'), alias(/_or/i, '_or'), alias(/_xor/i, '_xor'), alias(/_andif/i, '_andif'), alias(/_orif/i, '_orif'))),
          field('right', $._expression),
        ),
      ),

    symbol: $ => /:(\|[^|]*\||\\.|[\p{L}\p{N}_?!]+)+/u,

    comment: $ => token(prec(PREC.COMMENT, /#.*/)),
  },
});
