test/corpus/class.txt
================================================================================
class
================================================================================

def_slotted_exemplar(:exemplar, {}, {}, {_class |com.gesmallworld.magik.language.MagikFinalisable|})
$

def_slotted_exemplar(:another_exemplar, {}, _unset, {_class |com.gesmallworld.magik.html5.MagikHTML5Component|})
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (invoke
      (variable)
      (symbol)
      (vector)
      (vector)
      (vector
        (class))))
  (fragment
    (invoke
      (variable)
      (symbol)
      (vector)
      (unset)
      (vector
        (class)))))
