test/corpus/comments.txt
================================================================================
comments
================================================================================

# Single line 'comment'

# Multi
# Line
# Comment

_block
 1 _and # comment
 2
_endblock

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (fragment
    (block
      (logical_operator
        (number)
        (comment)
        (number)))))

================================================================================
comment and documentation at the start of the file
================================================================================

#%text_encoding=utf8
##
##
##

-------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (comment)
  (comment))
