test/corpus/invoke.txt
================================================================================
invoke
================================================================================

manage_soc()

_proc() _endproc()

:symbol()

--------------------------------------------------------------------------------

(source_file
  (fragment
    (invoke
      (variable)))
  (fragment
    (invoke
      (procedure
        (parameter_list))))
  (fragment
    (invoke
      (symbol))))
