test/corpus/primitive.txt
================================================================================
primitive
================================================================================

_primitive 512

_primitive 123
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (primitive
      (integer)))
  (fragment
    (primitive
      (integer))))
