test/corpus/strings.txt
================================================================================
strings
================================================================================

"string"
'string'
"%"
"'"
'"'
"multi
line"
"#not a comment"

--------------------------------------------------------------------------------

(source_file
  (fragment
    (string_literal))
  (fragment
    (string_literal))
  (fragment
    (string_literal))
  (fragment
    (string_literal))
  (fragment
    (string_literal))
  (fragment
    (string_literal))
  (fragment
    (string_literal)))
