test/corpus/thisthread.txt
================================================================================
thisthread
================================================================================

_thisthread.sleep(10)

_thisthread.background_priority
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (call
      (thisthread)
      (identifier)
      (integer)))
  (fragment
    (call
      (thisthread)
      (identifier))))
